--- a/quiz_page.html
+++ b/quiz_page.html
@@ -27,7 +27,7 @@
                         </div>
                       </nav>
                 </header>
-                <main role="main" class="container-fluid mt-4 flex-fill">
+                <main role="main" class="container-fluid mt-4 mb-3 flex-fill">
                         <div class="row">
                                 <div class="col-lg-6 vertical-center d-flex justify-content-center" id="profile_face">
                                     <img src="alex_rogers.png"  class="img-fluid">
