--- a/quiz_page.html
+++ b/quiz_page.html
@@ -79,8 +79,8 @@
                             </div>
                 </main>
                       <footer class="footer">
-                          <div class="container">
-                              <span class="text-muted">Copyright Pariveda Solutions 2019. All rights reserved.</span>
+                          <div class="container-fluid d-flex flex-wrap">
+                              <div class="text-muted">Copyright Pariveda Solutions 2019. All rights reserved.</div>
                           </div>
                       </footer>
                 </body>
