--- a/quiz_page.html
+++ b/quiz_page.html
@@ -12,7 +12,7 @@
     <body class="d-flex flex-column">
             <header>
                     <nav class="navbar navbar-expand navbar-dark" style="background-color:#0067b8">
-                        <a class="navbar-brand" href="#">Fellow Fins</a>
+                        <a class="navbar-brand" href="index.html">Fellow Fins</a>
                         
                         <!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                           <span class="navbar-toggler-icon"></span>
@@ -21,7 +21,7 @@
                         <div id="navbarSupportedContent" class="collapse navbar-collapse">
                           <ul class="navbar-nav">
                             <li class="nav-item active">
-                              <a class="nav-link" href="#">Quiz Now! <span class="sr-only">(current)</span></a>
+                              <a class="nav-link" href="quiz_page.html">Quiz Now! <span class="sr-only">(current)</span></a>
                             </li>
                           </ul>
                         </div>
