--- a/review.html
+++ b/review.html
@@ -29,17 +29,27 @@
                 </header>
                 <main role="main" class="container-fluid mt-4 mb-3 flex-fill">
                         <div class="row">
-                                <div class="col-lg-6 vertical-center d-flex justify-content-center" id="profile_face">
-                                    <img src="alex_rogers.png"  class="img-fluid">
+                                <div class="col-lg-6 vertical-centerd-flex justify-content-center" id="profile_face">
+                                    <img src="stephen_godderidge.png"  class="img-fluid">
                                 </div>
                                 <!--<div class="col-lg-4"></div>-->
                                 <div class="col-lg-6 vertical-center d-flex justify-content-center" id="multiple_choice">
+                                    <div>
+                                    <div class="row">
                                         <div class="card mt-3" style="width: 18rem;">
                                                 <div class="card-body">
-                                                  <h5 class="card-title">Alex Rogers</h5>
-                                                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                                        <h2 class="card-title">Name</h5>
+                                                        <h4 class="card-title">Market, Cohort</h6>
+                                                        <p class="card-text"><strong>Fun Fact:</strong> I ride a motorcycle, and have had my M-License for 2 ½ years</p>
+                                                        <p class="card-text"><strong>Favorite Quote:</strong> “The best time to plant a tree was 20 years ago. The second best time is now.” Chinese Proverb </p>              </p>
+                                                        <h5 class="card-text">Hometown, ST </h6>
                                                 </div>
                                         </div>
+                                    </div>
+                                    <div class="d-flex justify-content-end" style="flex-direction:column">
+                                        <button class="btn btn-primary" type="submit">Continue Quiz</button>
+                                    </div>
+                                    </div>
                                 </div>
                             </div>
                 </main>
