--- a/review.html
+++ b/review.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Quiz Page - Fellow Fins</title>
+        <title>Review - Fellow Fins</title>
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="style.css"></link>
@@ -36,7 +36,7 @@
                                 <div class="col-lg-6 vertical-center d-flex justify-content-center" id="multiple_choice">
                                     <div>
                                     <div class="row">
-                                        <div class="card mt-3" style="width: 18rem;">
+                                        <div class="card my-3" style="width: 18rem;">
                                                 <div class="card-body">
                                                         <h2 class="card-title">Name</h5>
                                                         <h4 class="card-title">Market, Cohort</h6>
