Shrunk picture on review.

--- a/review.html
+++ b/review.html
@@ -29,14 +29,14 @@
                 </header>
                 <main role="main" class="container-fluid mt-4 mb-3 flex-fill">
                         <div class="row">
-                                <div class="col-lg-6 vertical-centerd-flex justify-content-center" id="profile_face">
-                                    <img src="stephen_godderidge.png"  class="img-fluid">
+                                <div class="col-lg-6 vertical-center d-flex justify-content-center" id="profile_face" style="flex-direction:column">
+                                    <img src="stephen_godderidge.png"  class="img-fluid" style="max-height:80%;max-width:80%;width:auto">
                                 </div>
                                 <!--<div class="col-lg-4"></div>-->
                                 <div class="col-lg-6 vertical-center d-flex justify-content-center" id="multiple_choice">
                                     <div>
                                     <div class="row">
-                                        <div class="card my-3" style="width: 18rem;">
+                                        <div class="card my-3 bg-light" style="width: 18rem;">
                                                 <div class="card-body">
                                                         <h2 class="card-title">Name</h5>
                                                         <h4 class="card-title">Market, Cohort</h6>
