smaller-img in css.

--- a/review.html
+++ b/review.html
@@ -30,7 +30,7 @@
                 <main role="main" class="container-fluid mt-4 mb-3 flex-fill">
                         <div class="row">
                                 <div class="col-lg-6 vertical-center d-flex justify-content-center" id="profile_face" style="flex-direction:column">
-                                    <img src="stephen_godderidge.png"  class="img-fluid" style="max-height:80%;max-width:80%;width:auto">
+                                    <img src="stephen_godderidge.png"  class="img-fluid smaller-img">
                                 </div>
                                 <!--<div class="col-lg-4"></div>-->
                                 <div class="col-lg-6 vertical-center d-flex justify-content-center" id="multiple_choice">
