--- a/quiz_end.html
+++ b/quiz_end.html
@@ -12,7 +12,7 @@
     <body class="d-flex flex-column">
             <header>
                     <nav class="navbar navbar-expand navbar-dark" style="background-color:#0067b8">
-                        <a class="navbar-brand" href="#">Fellow Fins</a>
+                        <a class="navbar-brand" href="index.html">Fellow Fins</a>
                         
                         <!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                           <span class="navbar-toggler-icon"></span>
@@ -21,7 +21,7 @@
                         <div id="navbarSupportedContent" class="collapse navbar-collapse">
                           <ul class="navbar-nav">
                             <li class="nav-item active">
-                              <a class="nav-link" href="#">Quiz Now! <span class="sr-only">(current)</span></a>
+                              <a class="nav-link" href="quiz_page">Quiz Now! <span class="sr-only">(current)</span></a>
                             </li>
                           </ul>
                         </div>
@@ -29,20 +29,17 @@
                 </header>
                 <main role="main" class="container-fluid mt-4 mb-3 flex-fill">
                     <div class="row">
-                    
                         <div class="d-flex justify-content-center flex-grow-1 col my-5">
                             <h1 class="large-txt">You Got xx/55 Correct!</h1>
                         </div>
-                        <div class="d-flex align-items-end">
-                        <div class="col"> 
+                    </div>
+                    <div class="row"> 
                                 <div class="col-6 d-flex justify-content-center">
                                     <button class="btn btn-primary btn-ocean" type="submit">Try Again</button>
                                 </div>
                                 <div class="col-6 d-flex justify-content-center">
                                     <button class="btn btn-primary btn-ocean" type="submit">Home</button>
                                 </div>
-                            </div>
-                    </div>
                     </div>
                 </main>
                       <footer class="footer">
