made the buttons change color when you click them in the quiz

--- a/quiz_demo.html
+++ b/quiz_demo.html
@@ -8,8 +8,7 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-        <script src="quiz_functions.js"></script>
-        </head>
+    </head>
     <body class="d-flex flex-column">
             <header>
                     <nav class="navbar navbar-expand navbar-dark" style="background-color:#0067b8">
@@ -62,19 +61,20 @@
                                         </div>
                                     -->
 
-                                        <button type="button" onclick="answerSubmit()" class="btn btn-ocean btn-primary m-2 incorrectAnswer" data-toggle="button" aria-pressed="false" autocomplete="off">
-                                                Alex Rogers
-                                        </button>
-                                        <button type="button" onclick="answerSubmit()" id="correctAnswer" class="btn btn-ocean btn-primary m-2" data-toggle="button" aria-pressed="false" autocomplete="off">
-                                                Stephen Godderidge
-                                        </button>
-                                        <button type="button" onclick="answerSubmit()" class="btn btn-ocean btn-primary m-2 incorrectAnswer" data-toggle="button" aria-pressed="false" autocomplete="off">
-                                                Jake Altabef
-                                        </button>
-                                        <button type="button" onclick="answerSubmit()" class="btn btn-ocean btn-primary m-2 incorrectAnswer" data-toggle="button" aria-pressed="false" autocomplete="off">
-                                                Katie Lutz
-                                        </button>
-                                    </div>
+                                    <button type="button" class="btn btn-danger m-2 quiz-option" data-toggle="button" aria-pressed="false" autocomplete="off">
+                                            Alex Rogers
+                                    </button>
+                                    <button type="button" class="btn btn-success m-2 quiz-option" data-toggle="button" aria-pressed="false" autocomplete="off">
+                                            Stephen Godderidge
+                                    </button>
+                                    <button type="button" class="btn btn-danger m-2 quiz-option" data-toggle="button" aria-pressed="false" autocomplete="off">
+                                            Jake Altabef
+                                    </button>
+                                    <button type="button" class="btn btn-danger m-2 quiz-option" data-toggle="button" aria-pressed="false" autocomplete="off">
+                                            Katie Lutz
+                                    </button>
+                                    </form>
+                                </div>
                                 </div>
                             </div>
                 </main>
