played with some ts stuff

--- a/ff-app/src/index.html
+++ b/ff-app/src/index.html
@@ -35,5 +35,6 @@
                   <span class="text-muted">Copyright Pariveda Solutions 2019. All rights reserved.</span>
               </div>
           </footer>
+        <script>var personCode = Math.floor(Math.random() * 53); console.log(personCode);</script>
     </body>
 </html>
