Front page list.

--- a/ff-app/src/index.html
+++ b/ff-app/src/index.html
@@ -28,7 +28,7 @@
           </nav>
     </header>
     <main role="main" class="container">
-        <app-front></app-front>
+        <app-root></app-root>
     </main>
           <footer class="footer">
               <div class="container">
